alignment fixes (#5685)

--- a/packages/react-storage/src/styles/storage-browser.css
+++ b/packages/react-storage/src/styles/storage-browser.css
@@ -15,6 +15,7 @@
 .storage-browser__title {
   margin: 0;
   grid-column: 1 / 4;
+  margin-inline-start: var(--storage-browser-gap);
 }
 
 .storage-browser__navigate {
